src/test/ui/methods/method-not-found-generic-arg-elision.stderr
error[E0599]: no method named `distance` found for struct `Point<i32>` in the current scope
  --> $DIR/method-not-found-generic-arg-elision.rs:69:23
   |
LL | struct Point<T> {
   | --------------- method `distance` not found for this
...
LL |     let d = point_i32.distance();
   |                       ^^^^^^^^ method not found in `Point<i32>`
   |
   = note: The method was found for Point<f64>.

error[E0599]: no method named `other` found for struct `Point<_>` in the current scope
  --> $DIR/method-not-found-generic-arg-elision.rs:71:23
   |
LL | struct Point<T> {
   | --------------- method `other` not found for this
...
LL |     let d = point_i32.other();
   |                       ^^^^^ method not found in `Point<i32>`

error[E0599]: no method named `extend` found for struct `Map<_, _>` in the current scope
  --> $DIR/method-not-found-generic-arg-elision.rs:74:29
   |
LL |     v.iter().map(|x| x * x).extend(std::iter::once(100));
   |                             ^^^^^^ method not found in `Map<std::slice::Iter<'_, i32>, [closure@$DIR/method-not-found-generic-arg-elision.rs:74:18: 74:27]>`

error[E0599]: no method named `method` found for struct `Wrapper<bool>` in the current scope
  --> $DIR/method-not-found-generic-arg-elision.rs:77:13
   |
LL | struct Wrapper<T>(T);
   | --------------------- method `method` not found for this
...
LL |     wrapper.method();
   |             ^^^^^^ method not found in `Wrapper<bool>`
   |
   = note: The method was found for Wrapper<i8>, Wrapper<u16>, Wrapper<u16> and 3 more.

error[E0599]: no method named `other` found for struct `Wrapper<_>` in the current scope
  --> $DIR/method-not-found-generic-arg-elision.rs:79:13
   |
LL | struct Wrapper<T>(T);
   | --------------------- method `other` not found for this
...
LL |     wrapper.other();
   |             ^^^^^ method not found in `Wrapper<bool>`

error[E0599]: no method named `method` found for struct `Wrapper2<'_, bool, 3_usize>` in the current scope
  --> $DIR/method-not-found-generic-arg-elision.rs:83:13
   |
LL | struct Wrapper2<'a, T, const C: usize> {
   | -------------------------------------- method `method` not found for this
...
LL |     wrapper.method();
   |             ^^^^^^ method not found in `Wrapper2<'_, bool, 3_usize>`
   |
   = note: The method was found for Wrapper2<'a, i8, C>, Wrapper2<'a, i32, C> and Wrapper2<'a, i32, C>.

error[E0599]: no method named `other` found for struct `Wrapper2<'_, _, _>` in the current scope
  --> $DIR/method-not-found-generic-arg-elision.rs:85:13
   |
LL | struct Wrapper2<'a, T, const C: usize> {
   | -------------------------------------- method `other` not found for this
...
LL |     wrapper.other();
   |             ^^^^^ method not found in `Wrapper2<'_, bool, 3_usize>`

error[E0599]: no method named `not_found` found for struct `Vec<_, _>` in the current scope
  --> $DIR/method-not-found-generic-arg-elision.rs:88:7
   |
LL |     a.not_found();
   |       ^^^^^^^^^ method not found in `Vec<{integer}>`

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0599`.
